# artemis-demo

./: Cargo.toml
src/: main.rs  types.rs
src/collectors/: block_collector.rs  mod.rs
src/executors/: console_printer.rs  mod.rs
src/strategies/: new_block.rs
src/wallets/: mod.rs  near_wallet.rs
