[package]
name = "artemis-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## near
near-crypto = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"

## mev
artemis-core = { git = "https://github.com/mohamedalichelbi/artemis" }

## crypto
base64ct = { version = "1.6.0", features = ["alloc"] }
hex = "0.4.3"
k256 = "0.13.1"
sha3 = "0.10.8"

## async
futures = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version= "1.28.2", features = ["full"] }
async-trait = "0.1.73"
async-stream = "0.3.5"

## misc
crossbeam = "0.8.2"
dotenv = "0.15.0"
rust_decimal = { version = "1.32.0", features = ["default", "serde-with-arbitrary-precision", "serde-float"] }
serde = "1.0.188"
serde_json = "1.0.105"
strum = "0.25.0"
strum_macros = "0.25.2"
anyhow = "1.0.75"